# python-custom-iterators

./: LICENSE  README.md  pyproject.toml
custom_iterators/: __init__.py  iterators.py
tests/: test_circular.py  test_fibonacci_iterator.py  test_infinite_even_numbers.py  test_map_iterator.py  test_restarting_iterator.py  test_reverse_list.py  test_simple_counter.py  test_step_iterator.py  test_window_iterator.py
